Modifica su Show.html

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Ignoring directories
 # Both the directory itself and its contents will be ignored.
 typo3temp/
+typo3temp/logs
 vendor/
 typo3/
 fileadmin/
